--- a/First.html
+++ b/First.html
@@ -3,29 +3,28 @@
 <meta charset="utf-8">
 </head>
 <body>
-<h1 style="font-size: 50px;"><!--h1 태그 폰트 사이즈 변경-->Web</h1>
-<ol>    
-    <li>HTML</li>
-    <a href="1.html"></a>
-    <li>CSS</li>
-    <a href="CSS"></a>
-    <li>JavaScript</li>
-    <a href="JavaScript"></a>
+<h1 style="font-size: 50px;"><!--h1 태그 폰트 사이즈 변경--><a href="web.html">Web</a></h1>
+<ol>
+    <li><a href="First.html"target=”_blank” >HTML</a></li>
+    <li><a href="CSS.html"target=”_blank” >CSS</a></li>
+    <li><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
+    <a href="JavaScript.html"></a>
 </ol>
 <ul>
-    <li>egoing</li>
-    <li>otercc2</li>
-    <li>umm</li>
+    <li><a href="https://github.com/egoing"target= "_blank">egoint</a></li>
+    <li><a href="https://github.com/chunillyum"target= ”_blank”>otercc2</a></li>
+    <li><a href="https://github.com/chunillyum"target= ”_blank”>chunillyum</a></li>
 </ul>
 <h2>HTML?</h2>
-<a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target=”_blank” title="html 사용 설명서"><!-- 새 창으로 열기-->    Hypertext Markup Language</a>
+<a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target=”_blank” title="html 사용 설명서"><!-- 새 창으로 열기-->
+    Hypertext Markup Language</a>
 (HTML)is the standard markup language for
 <strong>creating <u>web</u> pages </strong>and web applications.Web browsers receive
 HTML documents from a web server or from local storage and render them into multimedia web pages.
 HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
 HTML elements are the building blocks of HTML pages.<p style="margin-top:40;">
     <img src="https://avatars.githubusercontent.com/u/134040847?s=400&u=f9332ec3afd8a5fa72c35f2c164a9dc8f0c6b60b&v=4" alt="페페"
-    height="650" width="250">
+    height="250" width="250">
 With HTML constructs, images and other objects, such as interactive forms,
 may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text
 such as headings, paragraphs, lists, links, quotes and other items.HTML elements are delineated by tags, written using angle brackets. </p>
