--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-hello?
+<body>
+    <script type="text/javascript">
+      window.location = "file:///C:/Users/%EC%9C%A4%EC%A4%80%EC%9A%A9/Desktop/kh-main/MyFrontend/First.html";
+    </script>
+  </body>
