--- a/Hi guys/First.html
+++ b/Hi guys/First.html
@@ -2,30 +2,33 @@
 <title>Hi FrontEnd</title>
 <meta charset="utf-8">
 </head>
-<body>
-<h1 style="font-size: 50px;"><!--h1 태그 폰트 사이즈 변경--><a href="web.html">Web</a></h1>
+<body bgcolor="#69c441">
+<h1 style="font-size: 30px;"><!--h1 태그 폰트 사이즈 변경-->
+    제가 웹 사<p>이트를 만</p><p>들었습니다..</p></h1>
+    <p>이 웹사이트는 여러분의 시력 보호를 위해 녹색 배경을 유지하고 있습니다.</p>
+    <div style="font-size: 25;"><strong>도움을 주신 분들</strong></div>
+    <ul>
+        <li style="font-size: 18px;"><a href="https://github.com/egoing"target= "_blank">egoing</a></li>
+        <li style="font-size: 18px;"><a href="https://github.com/chunillyum"target= ”_blank”>otercc2</a></li>
+        <li style="font-size: 18px;"><a href="https://github.com/chunillyum"target= ”_blank”>chunillyum</a></li>
+    </ul><br>
+    <h2>Web에 대해 알아보기</h2>
 <ol>
-    <li><a href="First.html"target=”_blank” >HTML</a></li>
-    <li><a href="CSS.html"target=”_blank” >CSS</a></li>
-    <li><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
+    <li style="font-size: 18px;"><a href="HTML.html"target=”_blank” >HTML</a></li>
+    <li style="font-size: 18px;"><a href="CSS.html"target=”_blank” >CSS</a></li>
+    <li style="font-size: 18px;"><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
     <a href="JavaScript.html"></a>
 </ol>
-<ul>
-    <li><a href="https://github.com/egoing"target= "_blank">egoint</a></li>
-    <li><a href="https://github.com/chunillyum"target= ”_blank”>otercc2</a></li>
-    <li><a href="https://github.com/chunillyum"target= ”_blank”>chunillyum</a></li>
-</ul>
-<h2>HTML?</h2>
-<a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target=”_blank” title="html 사용 설명서"><!-- 새 창으로 열기-->
-    Hypertext Markup Language</a>
-(HTML)is the standard markup language for
-<strong>creating <u>web</u> pages </strong>and web applications.Web browsers receive
-HTML documents from a web server or from local storage and render them into multimedia web pages.
-HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
-HTML elements are the building blocks of HTML pages.<p style="margin-top:40;">
-    <img src="https://avatars.githubusercontent.com/u/134040847?s=400&u=f9332ec3afd8a5fa72c35f2c164a9dc8f0c6b60b&v=4" alt="페페"
-    height="250" width="250">
-With HTML constructs, images and other objects, such as interactive forms,
-may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text
-such as headings, paragraphs, lists, links, quotes and other items.HTML elements are delineated by tags, written using angle brackets. </p>
+<font size="4">위 링크를 방문해서 알아봐주시면 감사하겠습니다.</font><br>
+<img src="https://i.namu.wiki/i/550NYHSLtdrYhOIpX4Nl2gnEMYrHPbu_sen5728OxvL1V6gVZE-GK2Qrw09_sSmUB1CwuniG_M7x0F5I2Nx_iA.webp"
+alt="페페따봉">
+<!-- <img src="https://avatars.githubusercontent.com/u/134040847?s=400&u=f9332ec3afd8a5fa72c35f2c164a9dc8f0c6b60b&v=4" alt="페페"
+height="250" width="250"> -->
+<h3>제작자 소개</h3>
+<strong>윤준용</strong>(25세, 무직)<p></p>
+<font size="3">1999년 4월10일 그는 서울특별시에서 태어났다. <br><br>
+키는 약 180cm 몸무게는 70kg의 우월한 유전자를 갖고있다. <br><br>
+타자 속도는 2023.06.19 기준 한글 430타, 영타 250타이며 지속적인 성장을 보이고 있다. <br><br>
+<br><br><br><br><br><br><br>
+이 사이트는 2023.06.19에 업데이트 됨
 </body>
