--- a/Hi guys/JavaScript.html
+++ b/Hi guys/JavaScript.html
@@ -2,23 +2,32 @@
     <title>Hi JavaScript</title>
     <meta charset="utf-8">
     </head>
-    <body>
-    <h1 style="font-size: 50px;"><!--h1 태그 폰트 사이즈 변경--><a href="web.html">Web</a></h1>
-    <ol>
-        <li><a href="First.html"target=”_blank” >HTML</a></li>
-        <li><a href="CSS.html"target=”_blank” >CSS</a></li>
-        <li><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
-        <a href="JavaScript.html"></a>
-    </ol>
-    <ul>
-        <li><a href="https://github.com/egoing"target= "_blank">egoint</a></li>
-        <li><a href="https://github.com/chunillyum"target= ”_blank”>otercc2</a></li>
-        <li><a href="https://github.com/chunillyum"target= ”_blank”>chunillyum</a></li>
-    </ul>
-    <h2>JavaScript</h2>
-    <a href="https://www.w3schools.com/js/" target="_blank" title="JavaScript 사용 설명서">JavaScript</a> 알아보기<br>
-    <br>
-     JavaScript에 대한 설명을 하기 귀찮기 때문에 위 JavaScript텍스트에 링크를 걸어드렸습니다.
-    해당 페이지는 자바 수업이 <a href="https://namu.wiki/w/%EC%98%AC%EB%A6%AC%EB%B9%84%EC%97%90%20%EC%A7%80%EB%A3%A8"
-    target="_blank">지루</a>하기 때문에 작성되었습니다<br>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRseKvOJzJDAoYz-99Ojcv4KIL7Q72gmnblZm8ZK_w2ig&s" alt="페페">
+    <body bgcolor="#69c441">
+        <h1 style="font-size: 50px;"><!--h1 태그 폰트 사이즈 변경--><a href="web.html">Web</a></h1>
+        이 글은 자바 수업이 <a href="https://namu.wiki/w/%EC%98%AC%EB%A6%AC%EB%B9%84%EC%97%90%20%EC%A7%80%EB%A3%A8"
+            target="_blank">지루</a>하기 때문에 작성되었습니다.
+    <h2>JavaScript 페이지에 오신 것을 환영합니다!</h2>
+    <p>이 페이지는 JavaScript 무엇인지에 대한 설명을 하기 위해 만들어졌습니다.</p>
+    <p>여러분은 이곳에서 JavaScript 대한 지식을 얻어갈 수 있을 것입니다.</p>
+    <h2 style="font-size: 25px;"><a href="https://www.w3schools.com/js/" target="_blank" title="JavaScript 사용 설명서">JavaScript</a></h2><br>
+     JavaScript에 대한 설명을 하기 귀찮기 때문에 위 JavaScript텍스트에 링크를 걸어드렸습니다. <br><br>
+     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRseKvOJzJDAoYz-99Ojcv4KIL7Q72gmnblZm8ZK_w2ig&s"
+     width="300" height="300" alt="페페">
+     <p><font size="4">또 뻔한 축구선수 스페셜 틀어놓을 줄 아셨나요?</p> <br>
+     이번엔 다르다! 야구선수 강백호의 <strong style="color: red;">홈런 모음</strong> 스페셜을 감상하시겠습니다!
+     <p><iframe width="560" height="315" src="https://www.youtube.com/embed/tXhUB-eEiKU" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen></iframe></p><br>
+        이야야아~ 멋있다 그죠? 해당 영상은 99년생인 강백호 선수의 재작년 하이라이트인데요. <br>
+        어린 선수인 만큼 어려운 공도 잘 치는 모습이 아주 보기 좋습니다! <br><br>
+        <img src="https://i.namu.wiki/i/550NYHSLtdrYhOIpX4Nl2gnEMYrHPbu_sen5728OxvL1V6gVZE-GK2Qrw09_sSmUB1CwuniG_M7x0F5I2Nx_iA.webp"
+alt="페페따봉"><br>
+<br><h3>WEB에 대한 더 많은 정보가 궁금하시다면?</h3>
+<ol>
+    <li style="font-size: 18px;"><a href="HTML.html"target=”_blank” >HTML</a></li>
+    <li style="font-size: 18px;"><a href="CSS.html"target=”_blank” >CSS</a></li>
+    <li style="font-size: 18px;"><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
+    <a href="JavaScript.html"></a>
+</ol>
+
+    
