--- a/Hi guys/CSS.html
+++ b/Hi guys/CSS.html
@@ -2,26 +2,34 @@
     <title>Hi CSS</title>
     <meta charset="utf-8">
     </head>
-    <body>
-    <h1 style="font-size: 50px;"><!--h1 태그 폰트 사이즈 변경--><a href="web.html">Web</a></h1>
-    <ol>
-        <li><a href="First.html"target=”_blank” >HTML</a></li>
-        <li><a href="CSS.html"target=”_blank” >CSS</a></li>
-        <li><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
-        <a href="JavaScript.html"></a>
-    </ol>
-    <ul>
-        <li><a href="https://github.com/egoing"target= "_blank">egoint</a></li>
-        <li><a href="https://github.com/chunillyum"target= ”_blank”>otercc2</a></li>
-        <li><a href="https://github.com/chunillyum"target= ”_blank”>chunillyum</a></li>
-    </ul>
-    <h2>CSS?</h2>
-    <a href="https://en.wikipedia.org/wiki/CSS" target=”_blank” title="CSS 사용 설명서"><!-- 새 창으로 열기-->
-        CSS</a> 알아보기<br><br>
-        <img src="https://thumb.mt.co.kr/06/2020/07/2020071418563658697_1.jpg/dims/optimize/" alt="홀란드"height="250" width="350"><br><br>
-        CSS에 대한 설명을 하기 귀찮기 때문에 위 css 텍스트에 링크를 걸어드렸습니다.
+    <body bgcolor="#69c441">
+        <h1 style="font-size: 50px;"><!--h1 태그 폰트 사이즈 변경--><a href="web.html">Web</a></h1>
         이 글은 자바 수업이 <a href="https://namu.wiki/w/%EC%98%AC%EB%A6%AC%EB%B9%84%EC%97%90%20%EC%A7%80%EB%A3%A8"
-        target="_blank">지루</a>하기 때문에 작성되었습니다.
+            target="_blank">지루</a>하기 때문에 작성되었습니다.
+    <h2>CSS 페이지에 오신 것을 환영합니다!</h2>
+    <p>이 페이지는 CSS가 무엇인지에 대한 설명을 하기 위해 만들어졌습니다.</p>
+    <p>여러분은 이곳에서 CSS에 대한 지식을 얻어갈 수 있을 것입니다.</p>
+    <h2 style="font-size: 25px;"><a href="https://en.wikipedia.org/wiki/CSS" target="_blank" title="CSS 사용 설명서"><!-- 새 창으로 열기-->
+        CSS</a></h2><br>
+        CSS에 대한 설명을 하기 귀찮기 때문에 위 css 텍스트에 위키피디아 링크를 걸어드렸습니다. <p></p>
+        <img src="https://thumb.mt.co.kr/06/2020/07/2020071418563658697_1.jpg/dims/optimize/" alt="홀란드"height="250" width="350"><br><br>
+        <br><br><font size="4">흠...막상 알려주는 건 좃도 없이 링크만 띡 걸어두고 끝이라구요?</font><br><br><br>
         <p><iframe width="560" height="315" src="https://www.youtube.com/embed/whbNBfb7XHk" title="YouTube video player"
             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;
             web-share" allowfullscreen></iframe></p>
+            <p style="font-size: 18px;">그렇다면 오신 김에 EPL 괴물 스트라이커 엘링 홀란드의 스페셜을 감상하고 가시는 건 어떤가요?</p>
+            <font size="4">현재 EPL을 씹어먹고 있는 홀란드는 무려 2000년생이란 나이로 멘시티 주전 공격수로 트레블을 달성했습니다.<br><br>
+            2000년생이면 지금 24살...저는 그 나이 때 편의점 알바를 했었는데 말이죠...</font>
+            <p style="font-size: 20px;">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcBaP9yxqlOHKfnx8GKS5dYBcAo7-
+                c1Qv5sw&usqp=CAU" height="500" width="350" alt="홀란드"></a></p><br>
+                <br><font size="5"><a href="https://namu.wiki/w/%EC%97%98%EB%A7%81%20%ED%99%80%EB%9E%80%EB%93%9C">
+                    홀란드</font></a>에 대해 자세히 알아보기<br><br>
+                <font size="5">얼굴도 잘생기고 축구도 잘하는 우리 홀란드 선수! 앞으로도 무궁무진한 발전을 기원하겠습니다!</font><br><br>
+                <br><h3>WEB에 대한 더 많은 정보가 궁금하시다면?</h3>
+                <ol>
+                    <li style="font-size: 18px;"><a href="HTML.html"target=”_blank” >HTML</a></li>
+                    <li style="font-size: 18px;"><a href="CSS.html"target=”_blank” >CSS</a></li>
+                    <li style="font-size: 18px;"><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
+                    <a href="JavaScript.html"></a>
+                </ol>
