--- a/Hi guys/CSS.html
+++ b/Hi guys/CSS.html
@@ -28,8 +28,8 @@
                 <font size="5">얼굴도 잘생기고 축구도 잘하는 우리 홀란드 선수! 앞으로도 무궁무진한 발전을 기원하겠습니다!</font><br><br>
                 <br><h3>WEB에 대한 더 많은 정보가 궁금하시다면?</h3>
                 <ol>
-                    <li style="font-size: 18px;"><a href="HTML.html"target=”_blank” >HTML</a></li>
-                    <li style="font-size: 18px;"><a href="CSS.html"target=”_blank” >CSS</a></li>
-                    <li style="font-size: 18px;"><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
+                    <li style="font-size: 18px; color: black;"><a href="HTML.html"target=”_blank” >HTML</a></li>
+                    <li style="font-size: 18px; color: black;"><a href="CSS.html"target=”_blank” >CSS</a></li>
+                    <li style="font-size: 18px; color: black;"><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
                     <a href="JavaScript.html"></a>
                 </ol>
