--- a/Hi guys/HTML.html
+++ b/Hi guys/HTML.html
@@ -28,8 +28,8 @@
             </font><br><font size="5"><a href="https://namu.wiki/w/%ED%82%AC%EB%A6%AC%EC%95%88%20%EC%9D%8C%EB%B0%94%ED%8E%98">음바페</a></font>
             <br><h3>WEB에 대한 더 많은 정보가 궁금하시다면?</h3>
             <ol>
-                <li style="font-size: 18px;"><a href="HTML.html"target=”_blank” >HTML</a></li>
-                <li style="font-size: 18px;"><a href="CSS.html"target=”_blank” >CSS</a></li>
-                <li style="font-size: 18px;"><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
+                <li style="font-size: 18px; color: black;"><a href="HTML.html"target=”_blank” >HTML</a></li>
+                <li style="font-size: 18px; color: black;"><a href="CSS.html"target=”_blank” >CSS</a></li>
+                <li style="font-size: 18px; color: black;"><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
                 <a href="JavaScript.html"></a>
             </ol>
