--- a/Hi guys/JavaScript.html
+++ b/Hi guys/JavaScript.html
@@ -24,9 +24,9 @@
 alt="페페따봉"><br>
 <br><h3>WEB에 대한 더 많은 정보가 궁금하시다면?</h3>
 <ol>
-    <li style="font-size: 18px;"><a href="HTML.html"target=”_blank” >HTML</a></li>
-    <li style="font-size: 18px;"><a href="CSS.html"target=”_blank” >CSS</a></li>
-    <li style="font-size: 18px;"><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
+    <li style="font-size: 18px; color: black;"><a href="HTML.html"target=”_blank” >HTML</a></li>
+    <li style="font-size: 18px; color: black;"><a href="CSS.html"target=”_blank” >CSS</a></li>
+    <li style="font-size: 18px; color: black;"><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
     <a href="JavaScript.html"></a>
 </ol>
 
