--- a/Hi guys/index.html
+++ b/Hi guys/index.html
@@ -14,9 +14,9 @@
     </ul><br>
     <h2>Web에 대해 알아보기</h2>
 <ol>
-    <li style="font-size: 18px;"><a href="HTML.html"target=”_blank” >HTML</a></li>
-    <li style="font-size: 18px;"><a href="CSS.html"target=”_blank” >CSS</a></li>
-    <li style="font-size: 18px;"><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
+    <li style="font-size: 18px; color: black;"><a href="HTML.html"target=”_blank” >HTML</a></li>
+    <li style="font-size: 18px; color: black;"><a href="CSS.html"target=”_blank” >CSS</a></li>
+    <li style="font-size: 18px; color: black;"><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
     <a href="JavaScript.html"></a>
 </ol>
 <font size="4">위 링크를 방문해서 알아봐주시면 감사하겠습니다.</font><br>
