사이트 컨텐츠 변경

--- a/Hi guys/JavaScript.html
+++ b/Hi guys/JavaScript.html
@@ -25,10 +25,14 @@
 alt="페페따봉"><br>
 <br><h3>WEB에 대한 더 많은 정보가 궁금하시다면?</h3>
 <ol>
-    <li><a href="HTML.html"target=”_blank” class="now">HTML</a></li>
+    <style>li{font-size: 18px;} .list{font-size: 20px;}</style>
+    <li><a href="HTML.html"target=”_blank” class="list">HTML</a></li>
+    <li><a href="CSS.html"target=”_blank” class="list">CSS</a></li>
+    <li><a href="JavaScript.html"target=”_blank” class="list">JavaScript</a></li>
+    <!-- <li><a href="HTML.html"target=”_blank” class="now">HTML</a></li>
     <li><a href="CSS.html"target=”_blank” class="now">CSS</a></li>
     <li><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
-    <style>.now{color: pink; text-decoration: none};</style><!--원하는 부분 클래스로 묶어서 처리-->
+    <style>.now{color: pink; text-decoration: none};</style>원하는 부분 클래스로 묶어서 처리 -->
 </ol>
     <!--Start of Tawk.to Script-->
 <script type="text/javascript">
