--- a/Hi guys/index.html
+++ b/Hi guys/index.html
@@ -1,66 +1,59 @@
 <head>
-<title>Hi FrontEnd</title>
-<meta charset="utf-8">
+    <title>whatsawtoday</title>
+    <meta charset="utf-8">
 </head>
-<body bgcolor="#69c441">
-<h1 style="font-size: 30px;"><!--h1 태그 폰트 사이즈 변경-->
-    제가 웹 사<p>이트를 만</p><p>들었습니다..</p></h1>
-    <p>이 웹사이트는 여러분의 시력 보호를 위해 녹색 배경을 유지하고 있습니다.</p>
-    <div style="font-size: 25;"><strong>도움을 주신 분들</strong></div>
-    <ul>
-        <li style="font-size: 18px;"><a href="https://github.com/egoing"target= "_blank">egoing</a></li>
-        <li style="font-size: 18px;"><a href="https://github.com/chunillyum"target= ”_blank”>otercc2</a></li>
-        <li style="font-size: 18px;"><a href="https://github.com/chunillyum"target= ”_blank”>chunillyum</a></li>
-    </ul><br>
-    <h2>Web에 대해 알아보기</h2>
-<ol>
-    <li style="font-size: 18px; color: black;"><a href="HTML.html"target=”_blank” >HTML</a></li>
-    <li style="font-size: 18px; color: black;"><a href="CSS.html"target=”_blank” >CSS</a></li>
-    <li style="font-size: 18px; color: black;"><a href="JavaScript.html"target=”_blank” >JavaScript</a></li>
-    <a href="JavaScript.html"></a>
-</ol>
-<font size="4">위 링크를 방문해서 알아봐주시면 감사하겠습니다.</font><br>
-<img src="https://i.namu.wiki/i/550NYHSLtdrYhOIpX4Nl2gnEMYrHPbu_sen5728OxvL1V6gVZE-GK2Qrw09_sSmUB1CwuniG_M7x0F5I2Nx_iA.webp"
-alt="페페따봉">
-<!-- <img src="https://avatars.githubusercontent.com/u/134040847?s=400&u=f9332ec3afd8a5fa72c35f2c164a9dc8f0c6b60b&v=4" alt="페페"
-height="250" width="250"> -->
-<h3>제작자 소개</h3>
-<strong>윤준용</strong>(25세, 무직)<p></p>
-<font size="3">1999년 4월10일 그는 서울특별시에서 태어났다. <br><br>
-키는 약 180cm 몸무게는 70kg의 우월한 유전자를 갖고있다. <br><br>
-타자 속도는 2023.06.19 기준 한글 430타, 영타 250타이며 지속적인 성장을 보이고 있다. <br><br>
-<br><br><br><br><br><br><br>
-이 사이트는 2023.06.19에 업데이트 됨
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/6490f52294cf5d49dc5eb1bf/1h3b3r4fq';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-    </script>
-    <!--End of Tawk.to Script-->
+<link rel="stylesheet" href="style.css">
+<body>
+    <h1><!--h1 태그 폰트 사이즈 변경-->
+        이 남자... 오늘은 뭘 봤을까?
+    <div id="centers">
+    <span>오늘 가장 감명 깊게 본 유튜브 영상을 하나씩 소개해드리겠습니다.</span>
+    <div id="myName"><a href="https://www.instagram.com/y.vn__/">chunillyum</a></div>
+    </div>
+</h1>
+    <div id="grid">
+        <ol>
+            <li>
+                오늘의 인물
+            </li>
+        </ol>
+        <div id=article align="center">
+        <iframe width="550" height="315" src="https://www.youtube.com/embed/61mjygHke4w" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+        encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p id="info">영화 내부자들</p>
+        <hr color="black"/>
+        <div id="comment">
+            관리자 코멘트
+            <div id="myComment">
+                <br>조승우가 타짜를 27살에 찍었다죠?
+            </div>
+        </div>
+        <div id="disqus_thread"></div>
+        <script>
+            (function () { // DON'T EDIT BELOW THIS LINE
+                var d = document, s = d.createElement('script');
+                s.src = 'https://www-chunillyum-store.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+                Disqus.</a></noscript>
+    </div>
+        </div>
+    </div>
+
+        <script type="text/javascript">
+            var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+            (function () {
+                var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+                s1.async = true;
+                s1.src = 'https://embed.tawk.to/6490f52294cf5d49dc5eb1bf/1h3b3r4fq';
+                s1.charset = 'UTF-8';
+                s1.setAttribute('crossorigin', '*');
+                s0.parentNode.insertBefore(s1, s0);
+            })();
+        </script>
+        <!--End of Tawk.to Script-->
 </body>
-<div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://www-chunillyum-store.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
