--- a/Hi guys/index.html
+++ b/Hi guys/index.html
@@ -2,20 +2,23 @@
     <title>whatsawtoday</title>
     <meta charset="utf-8">
 </head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="indexStyle.css">
 <body>
     <h1><!--h1 태그 폰트 사이즈 변경-->
         이 남자... 오늘은 뭘 봤을까?
     <div id="centers">
     <span>오늘 가장 감명 깊게 본 유튜브 영상을 하나씩 소개해드리겠습니다.</span>
-    <div id="myName"><a href="https://www.instagram.com/y.vn__/">chunillyum</a></div>
+    <div id="myName">
+        <a href="https://www.instagram.com/y.vn__/" style="text-decoration: none;">
+        chunillyum
+    </a></div>
     </div>
 </h1>
     <div id="grid">
         <ol>
-            <li>
-                오늘의 인물
-            </li>
+            <a href="HTML.html" target="_blank" style="text-decoration: none;">
+            <li>오늘의 인물</li>
+        </a>
         </ol>
         <div id=article align="center">
         <iframe width="550" height="315" src="https://www.youtube.com/embed/61mjygHke4w" 
