--- a/LiveCoding/index.html
+++ b/LiveCoding/index.html
@@ -5,7 +5,7 @@
 <body bgcolor="#69c441">
 <h1 style="font-size: 30px;"><!--h1 태그 폰트 사이즈 변경-->
     제가 웹 사<p>이트를 만</p><p>들었습니다..</p></h1>
-    <p>이 웹사이트는 여러분의 시력 보호를 위해 녹색 배경을 유지하고 있습니다.</p>
+    <p style="background-color: blue; color: brown;">이 웹사이트는 여러분의 시력 보호를 위해 녹색 배경을 유지하고 있습니다.</p>
     <div style="font-size: 25;"><strong>도움을 주신 분들</strong></div>
     <ul>
         <li style="font-size: 18px;"><a href="https://github.com/egoing"target= "_blank">egoing</a></li>
