--- a/LiveCoding/HTML.html
+++ b/LiveCoding/HTML.html
@@ -3,8 +3,25 @@
     <meta charset="utf-8">
 </head>
 <link rel="stylesheet" href="style.css">
+<style>
+    #nightday{
+        width: 80px
+    }
+</style>
 <body>
     <h1><!--h1 태그 폰트 사이즈 변경--><a href="index.html" ;>Web</a></h1>
+    <input id="nightday" type="button" value="night" onclick="
+    var target = document.querySelector('body')
+    if(this.value==='night') {
+        target.style.backgroundColor='black';
+    target.style.color='white';
+    this.value='day';
+    }
+    else{
+        target.style.backgroundColor='white';
+        target.style.color='black';
+        this.value='night';
+            }">
     <div id="grid">
         <ol>
             <li><a href="HTML.html" target=”_blank”>HTML</a></li>
@@ -14,7 +31,7 @@
         <div id="article">
             이 글은 자바 수업이 <a href="https://namu.wiki/w/%EC%98%AC%EB%A6%AC%EB%B9%84%EC%97%90%20%EC%A7%80%EB%A3%A8"
                 target="_blank">지루</a>하기 때문에 작성되었습니다.
-            <h2>HTML 페이지에 오신 것을 환영합니다!</h2>
+            <h2 style="color: red;">HTML 페이지에 오신 것을 환영합니다!</h2>
             <p>이 페이지는 HTML이 무엇인지를 설명하는 페이지입니다. <br><br>
                 여러분은 이곳에서 HTML이 무엇인지에 대한 지식을 얻어갈 수 있을 겁니다!</p>
             <h2 style="font-size: 25px;"><a href="https://www.w3schools.com/html/">HTML</a></h2>
