--- a/Hi guys/index.html
+++ b/Hi guys/index.html
@@ -5,14 +5,17 @@
 <link rel="stylesheet" href="indexStyle.css">
 <body>
     <h1><!--h1 태그 폰트 사이즈 변경-->
-        이 남자... 오늘은 뭘 봤을까?
+        <div id="hi">이 남자... 오늘은 뭘 봤을까?</div>
     <div id="centers">
-    <span>오늘 가장 감명 깊게 본 유튜브 영상을 하나씩 소개해드리겠습니다.</span>
-    <div id="myName">
-        <a href="https://www.instagram.com/y.vn__/" style="text-decoration: none;">
-        chunillyum
-    </a></div>
-    </div>
+    <div id="info">오늘 가장 감명 깊게 본 유튜브 영상을 하나씩 소개해드리겠습니다.</div><br>
+    <div class="userMenu"><a href="weather.html">오늘의 날씨</a></div>
+    <div class="userMenu">오늘 뭐 먹지?</div>
+    <div class="userMenu">방명록</div>
+    <div id="user">
+    <div class="userToPay">후원하기</div>
+    <div class="userToMe">chunillyum</div>
+</div>
+</div>
 </h1>
     <div id="grid">
         <ol>
