--- a/Hi guys/whoisit.html
+++ b/Hi guys/whoisit.html
@@ -1,5 +1,5 @@
 <head>
-    <title>main</title>
+    <title>whoisit</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=0.3">
     </head>
@@ -23,13 +23,23 @@
                 <li><a href="whoisit.html" target="_blank" style="text-decoration: none;">오늘의 인물</li></a>
             </ol>
             <div id=article align="center">
-                <h2>이건 또 무슨 사이트인가요?</h2>
-                <img src="pepe.png" width="505" height="400" alt="pepe">
+                <h2>오늘 알아볼 인물</h2>
+                <img src="sovo.jpg" width="650" height="400" alt="sovo">
             <p id="info"></p>
+            Dominic Szoboszlai
             <hr color="black"/>
             <div id="comment">
+                도미닉 소보슬라이
                 <div id="myComment">
-                    <p style="font-size: larger;">sexsexsexsexsexsexsexsexsexsexsexsexsexsexsexsexsexsexsexsex</p>
+                    <br>2000.10.25 신장 187cm 오른발잡이
+                    <br>헝가리 출신 미드필더
+                    <p>19-20 분데스리가 올해의 선수상</p>
+                    <p>빠른 스피드와 다부진 피지컬로 전방 압박 능력이 뛰어난 박투박 미드필더</p>
+                    <p>제2의 베컴이라 불리는 정확하고 강한 킥으로 넥스트넥스트 제라드가 될 것이라 예상됨</p>
+                    <p>2023.07.03 리버풀로 이적</p>
+                    <p></p>
+                    <p>특이사항</p>
+                    <p>제라드가 남긴 명언을 본인 몸에 타투로 새김(진성 리붕이)</p>
                 </div>
             </div>
             <div id="disqus_thread"></div>
